objects/Order.object
<CustomObject>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Billing_Date__c</fullName>
        <formula>EffectiveDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISA__c</fullName>
        <label>ISA</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Label__c</fullName>
        <label>Period Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonAccount_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Benefit__c</fullName>
        <label>Product Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Member + 1</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Basic - Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Created_Date__c</fullName>
        <label>Product Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Fee__c</fullName>
        <label>Product Fee</label>
        <precision>12</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Label</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>